apps/card-sniper/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: card-sniper
  labels:
    app.kubernetes.io/name: card-sniper
    app.kubernetes.io/part-of: card-sniper
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: card-sniper
  template:
    metadata:
      labels:
        app.kubernetes.io/name: card-sniper
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      nodeSelector:
        kubernetes.io/hostname: pj
      containers:
        - name: card-sniper
          image: ghcr.io/petar-jorgic/card-sniper:8f7ad2ca8994e4867652e3c8efcb5468a2675012
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: card-sniper-data
