apps/card-sniper/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: card-sniper
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: card-sniper
    app.kubernetes.io/part-of: card-sniper
subsets:
  - addresses:
      - ip: 192.168.1.20
    ports:
      - name: http
        port: 8000
        protocol: TCP
