apps/card-sniper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: card-sniper
  labels:
    app.kubernetes.io/name: card-sniper
    app.kubernetes.io/part-of: card-sniper
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: card-sniper
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
